; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs4_vnops.c_nfs4_delegation_return_enqueue.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs4_vnops.c_nfs4_delegation_return_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__, i32, i32 }
%struct.TYPE_6__ = type { i64 }
%struct.nfsmount = type { i32, i32 }

@N_DELEG_RETURN = common dso_local global i32 0, align 4
@NFSNOLIST = common dso_local global i64 0, align 8
@n_dreturn = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfs4_delegation_return_enqueue(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca %struct.nfsmount*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %5 = call %struct.nfsmount* @NFSTONMP(%struct.TYPE_7__* %4)
  store %struct.nfsmount* %5, %struct.nfsmount** %3, align 8
  %6 = load %struct.nfsmount*, %struct.nfsmount** %3, align 8
  %7 = call i64 @nfs_mount_gone(%struct.nfsmount* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %43

10:                                               ; preds = %1
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 1
  %13 = call i32 @lck_mtx_lock(i32* %12)
  %14 = load i32, i32* @N_DELEG_RETURN, align 4
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %17, %14
  store i32 %18, i32* %16, align 4
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 1
  %21 = call i32 @lck_mtx_unlock(i32* %20)
  %22 = load %struct.nfsmount*, %struct.nfsmount** %3, align 8
  %23 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %22, i32 0, i32 0
  %24 = call i32 @lck_mtx_lock(i32* %23)
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @NFSNOLIST, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %37

31:                                               ; preds = %10
  %32 = load %struct.nfsmount*, %struct.nfsmount** %3, align 8
  %33 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %32, i32 0, i32 1
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %35 = load i32, i32* @n_dreturn, align 4
  %36 = call i32 @TAILQ_INSERT_TAIL(i32* %33, %struct.TYPE_7__* %34, i32 %35)
  br label %37

37:                                               ; preds = %31, %10
  %38 = load %struct.nfsmount*, %struct.nfsmount** %3, align 8
  %39 = call i32 @nfs_mount_sock_thread_wake(%struct.nfsmount* %38)
  %40 = load %struct.nfsmount*, %struct.nfsmount** %3, align 8
  %41 = getelementptr inbounds %struct.nfsmount, %struct.nfsmount* %40, i32 0, i32 0
  %42 = call i32 @lck_mtx_unlock(i32* %41)
  br label %43

43:                                               ; preds = %37, %9
  ret void
}

declare dso_local %struct.nfsmount* @NFSTONMP(%struct.TYPE_7__*) #1

declare dso_local i64 @nfs_mount_gone(%struct.nfsmount*) #1

declare dso_local i32 @lck_mtx_lock(i32*) #1

declare dso_local i32 @lck_mtx_unlock(i32*) #1

declare dso_local i32 @TAILQ_INSERT_TAIL(i32*, %struct.TYPE_7__*, i32) #1

declare dso_local i32 @nfs_mount_sock_thread_wake(%struct.nfsmount*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
